--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,16 +47,9 @@ extra_css:
 # Page tree
 nav:
   - Home: README.md
-  - Result 101: Result101/README.md
-  - Class Reference:
-    - Ok: Result101/Ok/README.md
-    - constructors: Result101/Ok/constructors.md
-    - deduction guides: Result101/Ok/deduction_guides.md
-    - Err: Result101/Err/README.md
-    - constructors: Result101/Err/constructors.md
-    - deduction guides: Result101/Err/deduction_guides.md
-    - Result: Result101/Result/README.md
-    - constructors: Result101/Result/constructors.md
+  - Result 101:
+    - Introduction: Result101/intro.md
+    - Special Members: Result101/special_members.md
   - API Reference:
     - CHANGELOG: api/README.md
     - is_ok: api/is_ok.md
@@ -78,5 +71,5 @@ nav:
     - transpose: api/transpose.md
     - operator==: api/equality.md
   - Meta Function Reference:
-      - is_result: meta/is_result.md
-      - is_result_with: meta/is_result_with.md
+    - is_result: meta/is_result.md
+    - is_result_with: meta/is_result_with.md
